--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">SoulSync</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="upload_pic">Upload Picture</string>
+    <string name="btnCreateAccount">Create Account</string>
+    <string name="editEmailHint">Email</string>
+    <string name="editFName">First Name</string>
+    <string name="editLName">Last Name</string>
+    <string name="editTxtPassword">Password</string>
+    <string name="editConfPassword">Confirm Password</string>
 </resources>
