--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,9 +26,31 @@
 
     <!-- Account Fragment -->
     <string name="my_account_title">My Account</string>
-    <string name="btnUpdateProfile">Update</string>
+    <string name="btnUpdateProfile">Update Pic</string>
     <string name="logout_legend">Logout</string>
-
+    <string name="titleJournalText">My Journal</string>
+    <string name="AddJournalTitle">How is your day going?</string>
+    <string name="contentHint">Share a few thoughts...</string>
+    <string name="SaveButton">Save</string>
+    <string name="TitleHint">Describe your mood in a short sentence</string>
+    <string name="homeTitle">Hello!</string>
+    <string name="MindfulnessTitle">Let\'s practice Mindfulness!</string>
+    <string name="cancel">Cancel</string>
+    <string name="btnUserUpdate">Update</string>
+    <string name="breath">Breath</string>
+    <string name="logTitle">Log your water intake :)</string>
+    <string name="enter_water_intake_amount_cups">Enter water intake amount (cups):</string>
+    <string name="e_g_5">e.g., 5</string>
+    <string name="add">Add</string>
+    <string name="settings">Settings</string>
+    <string name="daily_reminders">Daily Reminders</string>
+    <string name="theme_selection">Theme Selection</string>
+    <string name="app_version_1_0_0">App Version: 1.0.0</string>
+    <string name="help_plan">Help Plan</string>
+    <string name="create_a_help_plan_for_when_you_are_feeling_bad_you_can_add_contacts_breathing_exercises_and_more">Create a help plan for when you are feeling bad. You can add contacts, breathing exercises, and more.</string>
+    <string name="create_help_plan">Create Help Plan</string>
+    <string name="view_help_plan">View Help Plan</string>
+    <string name="waterLogTitle">My Water Log</string>
 
 
 </resources>
